          Release Notes for bweb 2.2
2007/11/16
 - Cleanup group usage
 - Add some functions for security

2007/11/08
 - Add Prev/Next on job log output

2007/10/31
 - Add a error filter to Job zoom view

2007/10/30
 - Replace VolStatus by Enabled in volume location 
 - Add Enabled in volume update and zoom

2007/10/26
 - add an option to view only expired media

2007/09/26
 - add bresto.pl, bresto.html and bresto.js

2007/08/20
 - fix update of locationid field during label barcodes 
 - use update recyclepool= instead of UPDATE Media SET RecyclePoolId

2007/08/11
 - update install_bweb

2007/07/26
 - Make search case insensitive with postgresql 

2007/07/09
 - Tweak Job per group summary view
 - Fix Kb, Gb, Tb unit

2007/07/03
 - Add MediaType to Pool view

2007/06/21
 - fix a javascript bug when percent usage is to high

2007/05/31
 - add group management (see INSTALL to enable it)

2007/05/23
 - put Bconsole error to stderr (error.log)

2007/03/30
 - disconnect from database before exiting

2007/03/19
 - add a re-run option in display_job_zoom

2007/03/05
 - Fix fileset option when running a job

2007/03/02
 - Add Postgresql and Mysql5 database size information (See INSTALL for mysql)

2007/03/01
 - Add display_time_log option to get timestamp in display_log
 - Add Warning filter on display_job (see jobstatus=T and joberrors > 0)

2007/02/28
 - Add limit and offset params to display_log

2007/02/25
 - Update INSTALL notes (GRANT options for mysql)
 - You can choose a other table than Job to do your statistics
   Job is purged by Media or Job retention, it's not very useful
   to follow trends.

2007/02/14
 - Add EndTime to display_job if you want add it to your tpl

2007/01/25
 - Add spanish translation, thanks to Santiago Alberch <caesarneron@gmail.com>

2007/01/15
 - fix do_update_media timeout bug

2007/01/09
 - fix stats bug on main page

2007/01/01
 - Add an index.html page on /bweb

2006/12/31
 - Move /etc/bweb/config to /etc/bacula/bweb.conf

2006/12/29